# OxideMD

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SNAP_PUBLISH.md  package.json  release_notes.md
.github/workflows/: release.yml
frontend/: app.js  contextmenu.js  draft-store.js  editor-format.js  editor.js  folder.js  index.html  keybindings.js  outline.js  search.js  settings.js  shortcuts-display.js  state.js  style.css  tabs.js  window-size.js
snap/: snapcraft.yaml
src-tauri/: Cargo.toml  oxidemd.desktop  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  highlight.rs  lib.rs  main.rs  markdown.rs  util.rs  watcher.rs
