[package]
name = "oxidemd"
version = "3.1.1"
description = "A lightweight, cross-platform Markdown viewer and editor"
authors = ["Aleksandar Colovic"]
license = "MIT"
repository = "https://github.com/FenrirTheGray/OxideMD"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "oxidemd_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

pulldown-cmark = { version = "0.12", features = ["simd"] }
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
toml = "0.8"
directories = "5"
open = "5"
base64 = "0.22"
notify = "6"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
gdk = "0.18"
